CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(io_test)

MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

set(ALL_FLAGS_IN_ONE_COMMON "-Wall -std=gnu++11 -fPIC -rdynamic")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} ${ALL_FLAGS_IN_ONE_COMMON}")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} ${ALL_FLAGS_IN_ONE_COMMON}")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "$ENV{CXXFLAGS} ${ALL_FLAGS_IN_ONE_COMMON}")
set(CMAKE_CXX_FLAGS_MINSIZEREL "$ENV{CXXFLAGS} ${ALL_FLAGS_IN_ONE_COMMON}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)

set(EXECUTABLE_OUTPUT_PATH ~/io_test/bin)

#ADD_SUBDIRECTORY()

SET(APP "io_test")
FILE(GLOB SRC_LISTS *.cpp *.hpp)
ADD_EXECUTABLE(${APP} ${SRC_LISTS})
TARGET_LINK_LIBRARIES(${APP})
